--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <section data-state="header11">
                 <style>
                     .header11 header:after {
-                        content: "Disgression: what is a container?";
+                        content: "Digression: what is a container?";
                     }
                 </style>
                 <img data-src="img/linux-container.png" width="70%" />
@@ -624,7 +624,7 @@
                 <h2>Block 2: Scaling/Loadbalancing</h2>
             </section>
             <section>
-                <h2>WDYT about our current application?</h2>
+                <h2>What do you think about our current application?</h2>
             </section>
             <section data-state="header36">
                 <style>
@@ -746,13 +746,7 @@
                     </li>
                     <li>Security and DoS mitigation
                     </li>
-
-
-
-
-
                 </ul>
-
             </section>
             <section data-state="header43">
                 <style>
@@ -783,26 +777,59 @@
             <section data-state="header44">
                 <style>
                     .header44 header:after {
-                        content: "Service Mesh";
+                        content: "Service Mesh or sidecar proxy";
                     }
                 </style>
+                <img data-src="img/servicemesh.png" width="60%" />
+
             </section>
 
 
             <section data-state="header45">
                 <style>
                     .header45 header:after {
-                        content: "Service Mesh";
+                        content: "Service Mesh: control plane";
                     }
                 </style>
+                <img data-src="img/servicemeshcontrolplane.png" width="90%" />
+
             </section>
 
             <section data-state="header46">
                 <style>
                     .header46 header:after {
-                        content: "Service Mesh";
+                        content: "Service Mesh implementations";
                     }
                 </style>
+                <table>
+                    <colgroup span="3"></colgroup>
+                    <tr>
+                        <td>
+                            <img data-src="img/istio.png" width="90%" />
+
+                        </td>
+                        <td>
+                            <img data-src="img/linkerd.jpg" width="70%" />
+
+                        </td>
+
+                        <td>
+                            <img data-src="img/envoy.png" width="130%" />
+
+                        </td>
+                    </tr>
+                </table>
+            </section>
+
+
+            <section data-state="header47">
+                <style>
+                    .header47 header:after {
+                        content: "How Istio works";
+                    }
+                </style>
+                <img data-src="img/howistioworks.jpg" width="90%" />
+
             </section>
 
 
