--- a/index.html
+++ b/index.html
@@ -831,8 +831,85 @@
                 <img data-src="img/howistioworks.jpg" width="90%" />
 
             </section>
+            <section data-state="header48">
+                <style>
+                    .header48 header:after {
+                        content: "Edge loadbalancers at scale";
+                    }
+                </style>
+                <img data-src="img/lbhabgp.png" width="90%" />
+                <ul>
+                    <li><a href="https://static.googleusercontent.com/media/research.google.com/en//pubs/archive/44824.pdf">Maglev</a> from Google.</li>
+                    <li>NLB from Amazon.</li>
+                    <li>Each server talks BGP from <a href="https://www.fastly.com/blog/building-and-scaling-fastly-network-part-1-fighting-fib">Fastly</a></li>
+                </ul>
 
+            </section>
+            <section data-state="header49">
+                <style>
+                    .header49 header:after {
+                        content: "Handling overload";
+                    }
+                </style>
+                <ul>
+                    <li>Load shedding by criticality.</li>
+                    <li>Graceful degration.</li>
+                    <li>Rate limiting.</li>
+                    <li>Client side throttling.</li>
+                    <li>Client retries.</li>
+                </ul>
+            </section>
+            <section data-state="header50">
+                <style>
+                    .header50 header:after {
+                        content: "Handling overload";
+                    }
+                </style>
+                <img data-src="img/4-worker-utilization-load-shedder.svg" width="80%" />
+            </section>
 
+            <section data-state="header51">
+                <style>
+                    .header51 header:after {
+                        content: "Autoscaling";
+                    }
+                </style>
+                <p>What is autoscaling?</p>
+                <table>
+                    <colgroup span="2" />
+                    <tr>
+                        <td> <img data-src="img/capacity-example-diagram.png" width="140%" />
+                        </td>
+                        <td><img data-src="img/capacity-example-over-diagram.png" width="140%" /></td>
+
+                    </tr>
+                </table>
+            </section>
+
+            <section data-state="header51">
+                <style>
+                    .header51 header:after {
+                        content: "Autoscaling";
+                    }
+                </style>
+                <table>
+                    <colgroup span="2" />
+                    <tr>
+                        <td><img data-src="img/capacity-example-under-diagram.png" width="140%" /></td>
+                        <td><img data-src="img/capacity-example-with-as-diagram.png" width="140%" /></td>
+
+                    </tr>
+                </table>
+            </section>
+            <section data-state="header52">
+                <style>
+                    .header52 header:after {
+                        content: "AutoscalingGroup";
+                    }
+                </style>
+                <img data-src="img/as-basic-diagram.png" width="60%" />
+
+            </section>
         </div>
     </div>
 
